# animated_algebra

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aa_controller.cpp  aa_controller.h  aa_renderer.cpp  aa_renderer.h  action.cpp  action.h  algebra.cpp  algebra.h  animation.h  animator.cpp  animator.h  circle_node.h  coordinates.txt  custom_renderer.cpp  custom_renderer.h  design.cpp  graphics.cpp  graphics.h  image.cpp  image.h  limited_renderer.cpp  limited_renderer.h  main.cpp  matrix.cpp  matrix.h  node.h  p_rect.cpp  p_rect.h  quad_factor_animator.cpp  quad_factor_animator.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scratch  (+10 more)
liven/: ASCII_Ratios.txt  CMakeLists.txt  action.cpp  action.h  animation.cpp  animation.h  animator.cpp  animator.h  arrow_node.cpp  arrow_node.h  ascii_image.h  ascii_renderer.cpp  ascii_renderer.h  ascii_viewer.cpp  ascii_viewer.h  caps_renderer.h  coordinates.txt  default_renderer.cpp  default_renderer.h  design.cpp  global_defs.h  graphics.cpp  graphics.h  grid_node.cpp  grid_node.h  image.cpp  image.h  lineup_node.cpp  lineup_node.h  matrix.cpp  matrix.h  node.cpp  node.h  node_declarations.h  rect_node.cpp  rect_node.h  renderer.cpp  renderer.h  scene.cpp  scene.h  (+7 more)
liven/Testing/Temporary/: CTestCostData.txt
liven/tests/: CMakeLists.txt  test_algebra.cpp  test_arrow_node.cpp  test_ascii_renderer  test_ascii_renderer.cpp  test_graphics.cpp  test_grid_node.cpp  test_image.cpp  test_lineup_node.cpp  test_matrix.cpp  test_node.cpp  test_rect_node.cpp  test_renderer.cpp  test_scene.cpp  test_text_node.cpp  test_unique_sequence.cpp  test_viewer.cpp
tests/: CMakeLists.txt  test_algebra.cpp  test_circle_node.cpp
